style.css
/* The @import rule below imports the Playfair Display and Source Sans Pro fonts into the stylesheet*/
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro:wght@400&display=swap");

body {
  background-color: #eae2b7;
  color: #003049;
  font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
  padding: 40px;
}

/* Headings */
h1,
h2,
h3 {
  font-family: "Playfair Display", Times, serif;
  text-align: center;
}

/* Header */
header {
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Containers */
div {
  background-color: #eae2b7;
  margin: auto;
  width: 600px;
}

article {
  padding: 50px 0;
}

article div {
  width: 100%;
}

nav {
  padding-left: 30px;
}

/* New containers for pt. 2 */

#intro {
  display: flex;
  justify-content: center;
  align-items: center;
}

#image {
  justify-content: center;
  display: flex;
}

#portfolio {
  justify-content: space-around;
  align-content: flex-start;
  display: flex;
  text-align: center;
  flex-wrap: wrap;
}

#portfolio section {
  max-width: 200px;
}

/* Paragraphs */
p {
  line-height: 1.5;
}

#portfolio p {
  font-size: 14px;
}

/* Links */
a:link {
  color: #d62828;
}

a:hover {
  color: #f77f00;
}

nav a {
  padding-left: 20px;
}

/* Images */
img {
  width: 100%;
  max-width: 200px;
  height: auto;
}

.image-circle {
  border: 2px solid #003049;
  border-radius: 50%;
}

/* Footer */
footer {
  text-align: center;
}

/* Other page elements */
hr {
  border: 1px solid black;
}

.pagebreak {
  height: 0px;
  flex-basis: 100%;
}

